--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "jquery": "^3.1.0",
     "pug": "^2.0.0-beta6",
     "slideout": "^0.1.12",
-    "vue": "^2.0.0-rc.1"
+    "vue": "^2.0.0-rc.1",
+    "vue-router": "^2.0.0"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
