--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "hamburgers": "^0.5.0",
+    "holderjs": "^2.9.4",
     "jquery": "^3.1.0",
     "pug": "^2.0.0-beta6",
     "slideout": "^0.1.12",
