--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "babel-polyfill": "^6.16.0",
+    "babel-runtime": "^6.11.6",
     "blueimp-file-upload-node": "^2.1.0",
     "body-parser": "~1.15.1",
     "bootstrap": "^3.3.7",
@@ -31,7 +33,10 @@
   "devDependencies": {
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.13.2",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-preset-stage-3": "^6.17.0",
     "browser-sync": "^2.16.0",
     "cross-env": "^1.0.6",
     "css-loader": "^0.23.1",
